--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>br.com</groupId>
-    <artifactId>api-order</artifactId>
+    <artifactId>api-payment</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api-order</name>
-    <description>api-order</description>
+    <name>api-payment</name>
+    <description>api-payment</description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -47,7 +47,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>3.1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
