--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>br.com</groupId>
-    <artifactId>api-payment</artifactId>
+    <artifactId>api-user</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api-payment</name>
-    <description>api-payment</description>
+    <name>api-user</name>
+    <description>api-user</description>
     <properties>
         <java.version>11</java.version>
     </properties>
